[package]
name = "goldrush"
version = "0.1.0"
authors = ["Rail Khusnutdinov <mail@rail-ka.ru>"]
edition = "2018"

[[bin]]
name = "goldrush"
path = "src/main.rs"

[dependencies]
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] } # date and time support for rust
serde = "1.0" # сериализация/десериализация
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
bincode = "1"
url = "2.2"
tokio = { version = "1.2", features = ["time", "parking_lot", "rt", "sync"] }
actix = "0.11.0-beta.2"
actix-web = "4.0.0-beta.3"
actix-web-actors = "4.0.0-beta.2"
actix-rt = "2.1"
actix-service = "2.0.0-beta.4"
http = "0.2"
json = "0.12"
log = "0.4"
env_logger = "0.8"
lazy_static = "1.4"
#sled = "0.34"
dashmap = "4.0"
evmap = "10.0"
rustc-hash = "1.1"
num-traits = "0.2"
num-derive = "0.3"
