[package]
name = "goldrush"
version = "0.1.0"
authors = ["Rail Khusnutdinov <mail@rail-ka.ru>"]
edition = "2018"
default-run = "goldrush"

[[bin]]
name = "goldrush"
path = "src/main.rs"

[dependencies]
futures = "0.3"
#chrono = { version = "0.4", features = ["serde"] } # date and time support for rust
serde = "1.0" # сериализация/десериализация
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.3", features = ["time", "parking_lot", "rt", "rt-multi-thread", "sync", "macros"] }
#actix = "0.11.0-beta.3"
#actix-rt = "2.1"
awc = "3.0.0-beta.3"
actix-http = "3.0.0-beta.4"
#json = "0.12"
#log = "0.4"
#env_logger = "0.8"
lazy_static = "1.4"
#dashmap = "4.0"
#evmap = "10.0"
rustc-hash = "1.1"
#num-traits = "0.2"
#num-derive = "0.3"
hyper = { version = "0.14", features = ["http1", "client", "runtime"] }
#hyper-timeout = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json"]}
#bitvec = "0.21.1"
#harsh = "0.2.0"
#num_cpus = "1.13"
parking_lot = "0.11.1"
